# sampling-graph-mining

./: .gitignore  CMakeLists.txt  README.md  logic.cpp  process_result.py  run_elp.sh  run_five_chain.sh  run_nodes.sh  run_overall.sh  run_threaads.sh  run_triangle2.sh
applications/: AllPredicateWeightedTriangle.cpp  AtLeastOnePredicateWeightedTriangle.cpp  ChainMining.cpp  FiveHouse.cpp  FiveStar.cpp  FourChain.cpp  FourClique.cpp  ThreeChain.cpp  ThreeMotif.cpp  ThreeMotifWithoutCache.cpp  Triangle.cpp  Triangle2.cpp
cmake/: FindNuma.cmake
datasets/clueweb12/dataset/: .gitignore
datasets/friendster/: .gitignore
datasets/friendster/scripts/: download.sh  process.cpp
datasets/patent/scripts/: a.out  download.sh  process.cpp
datasets/simple-10/scripts/: main.cpp
datasets/simple-10000/scripts/: main  main.cpp
datasets/simple-30/dataset/: simple-30.edgelist
datasets/simple-30/scripts/: main
datasets/simple-5/dataset/: simple-5.biedgelist  simple-5.csv  simple-5.edgelist
datasets/simple-5/scripts/: main
datasets/soc-livejournal/scripts/: download.sh  main.cpp
datasets/toolkits/: edgelist_to_arabesque_format  edgelist_to_arabesque_format.cpp  edgelist_to_biedgelist.cpp  get_weighted_datasets.cpp
datasets/twitter/scripts/: download.sh  process.cpp
datasets/wiki-vote/dataset/: wiki-vote.edgelist  wiki-vote.weighted.edgelist
datasets/wiki-vote/scripts/: download.sh  process  process.cpp
datasets/youtube/: .gitignore
datasets/youtube/scripts/: download.sh  process.cpp
exp_scripts/: run.sh  run_alchem.sh  run_aliyun.sh  run_aliyun_backup.sh
include/: Bitmap.hpp  Debug.hpp  ErrorLatencyProfile.hpp  Graph.hpp  GraphFilters.hpp  NetworkInterface.hpp  Random.hpp  Regression.hpp  SamplerGenerator.hpp  SharedMemSys.hpp  Time.hpp  Type.hpp  Utilities.hpp  ZGraphInstance.hpp
naive_implementation/: .gitignore  AtLeastOneWeightedTriangleCounting  AtLeastOneWeightedTriangleCounting.cpp  FiveChain  FiveChain.cpp  FiveHouse  FiveHouse.cpp  FiveStar  FiveStar.cpp  FourChain  FourChain.cpp  FourClique  FourClique.cpp  Makefile  ThreeChain.cpp  ThreeChainApprox.cpp  TriangleCounting.cpp  WeightedTriangleCounting  WeightedTriangleCounting.cpp
naive_implementation/SimpleGraphMatcher/: match_loop.py
new/: EBStop.cpp  EBStop.hpp  Graph.cpp  Graph.hpp  logic.cpp
node002/clueweb12/script/: download.sh
node002/friendster/scripts/: process
node002/patent/dataset/: patents.csv
node002/patent/scripts/: a.out  process.cpp
node002/simple-10/dataset/: simple-10.biedgelist  simple-10.csv  simple-10.edgelist
node002/simple-10/scripts/: main
node002/simple-10000/: .gitignore
node002/simple-30/dataset/: simple-30.biedgelist  simple-30.csv
node002/simple-30/scripts/: main.cpp
node002/simple-5/scripts/: main.cpp
node002/small-10/: small-10.edgelist
node002/soc-livejournal/dataset/: live-journal.csv  live-journal.weighted.csv
node002/soc-livejournal/scripts/: a.out  main
node002/toolkits/: Makefile  convert_weighted_datasets.sh
node002/twitter/dataset/: .gitignore
node002/twitter/scripts/: process
node002/wiki-vote/scripts/: process  process.cpp
node002/youtube/dataset/: youtube.csv
node002/youtube/scripts/: process
sampling/: EBStop.cpp  EBStop.hpp  Graph.cpp  Graph.hpp  IEStop.cpp  IEStop.hpp  Makefile  a.txt  graph  main  main.cpp  newsplit.py  split.py
src/: Bitmap.cpp  Debug.cpp  ErrorLatencyProfile.cpp  Graph.cpp  GraphFilters.cpp  NetworkInterface.cpp  Random.cpp  Regression.cpp  SamplerGenerator.cpp  SamplerGenerator.cpp~  SharedMemSys.cpp  Time.cpp  Utilities.cpp  ZGraphInstance.cpp
tests/: TestGraph.cpp  TestGraphFilter.cpp  TestPattern.cpp  TestPattern2.cpp  TestRandom.cpp  TestRegression.cpp  TestSubgraph.cpp
